--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ember-cli"
   ],
   "dependencies": {
-    "js-xlsx": "^0.8.0",
+    "xlsx": "^0.8.0",
     "ember-cli-htmlbars": "0.7.9"
   },
   "ember-addon": {
