--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,9 @@
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "file-saver": "*",
-    "js-xlsx": "~0.8.0",
     "qunit": "~1.18.0"
+    "file-saver": "*",
+    "js-xlsx": "~0.8.0"
   },
   "devDependencies": {
   }
