--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-data-export",
-  "version": "0.0.31",
+  "version": "0.0.32",
   "author" : "Matt Armstrong",
   "description": "Provides ability to export a set of json data as excel or csv file.",
   "directories": {
@@ -22,7 +22,10 @@
   },
   "keywords": [
     "ember-addon",
-    "ember-cli"
+    "ember-cli",
+    "xlsx",
+    "excel",
+    "csv"
   ],
   "dependencies": {
     "xlsx": "^0.8.0",
