--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-data-export",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author" : "Matt Armstrong",
   "description": "Provides ability to export a set of json data as excel or csv file.",
   "directories": {
@@ -28,9 +28,9 @@
     "csv"
   ],
   "dependencies": {
-    "xlsx": "^0.8.0",
-    "ember-select-list": "0.9.5",
-    "ember-cli-htmlbars": "0.7.9"
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-select-list": "^0.9.5",
+    "xlsx": "^0.8.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
