--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-data-export",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "author" : "Matt Armstrong",
   "description": "Provides ability to export a set of json data as excel or csv file.",
   "directories": {
@@ -12,11 +12,11 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/roofstock/ember-cli-data-export",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Matt Armstrong",
   "license": "MIT",
   "devDependencies": {
   },
