--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,7 @@
 {
   "name": "ember-cli-data-export",
   "dependencies": {
-    "jquery": "^1.11.3",
-    "file-saver": "*",
-    "js-xlsx": "~0.8.0"
+    "jquery": "^1.11.3"
   },
   "devDependencies": {
   }
