--- a/package.json
+++ b/package.json
@@ -14,32 +14,28 @@
   },
   "repository": "https://github.com/roofstock/ember-cli-data-export",
   "engines": {
-    "node": ">= 4"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "^2.12.0",
-    "ember-cli-app-version": "^2.0.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.2.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli": "~2.16.2",
+    "ember-cli-app-version": "3.0.0",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-qunit": "^4.0.0",
     "ember-cli-release": "1.0.0-beta.2",
-    "ember-cli-shims": "^1.0.2",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.11.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-resolver": "^3.0.0",
-    "ember-source": "~2.12.0",
-    "loader.js": "^4.0.10"
+    "ember-cli-uglify": "^2.0.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.16.0",
+    "loader.js": "^4.2.3"
   },
   "keywords": [
     "ember-addon",
@@ -49,8 +45,8 @@
     "csv"
   ],
   "dependencies": {
-    "ember-cli-htmlbars": "^1.2.0",
-    "ember-cli-babel": "^5.1.7",
+    "ember-cli-babel": "^6.6.0",
+    "ember-cli-htmlbars": "^2.0.1",
     "ember-select-list": "^0.9.5",
     "xlsx": "^0.9.0"
   },
