--- a/.npmignore
+++ b/.npmignore
@@ -6,10 +6,20 @@ dist/
 .bowerrc
 .editorconfig
 .ember-cli
+.eslintrc.js
+.gitignore
+.watchmanconfig
 .travis.yml
 .npmignore
 **/.gitkeep
 bower.json
 ember-cli-build.js
+testem.js
+yarn.lock
 Brocfile.js
 testem.json
+
+# ember-try
+.node_modules.ember-try/
+bower.json.ember-try
+package.json.ember-try
