--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
   "name": "ember-spreadsheet-export",
   "version": "0.1.29",
-  "author": "Matt Armstrong",
   "contributors": [
     "Paul Nicholls"
   ],
   "description": "Provides ability to export a set of json data as excel or csv file.",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
   "scripts": {
     "build": "ember build",
-    "start": "ember server",
-    "test": "ember try:each"
+    "lint:js": "eslint .",
+    "start": "ember serve",
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
-  "repository": "https://github.com/pauln/ember-spreadsheet-export",
   "engines": {
-    "node": ">= 4"
+    "node": "6.* || 8.* || >= 10.*"
   },
-  "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "^2.12.0",
+    "broccoli-asset-rev": "^2.7.0",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "~3.3.0",
     "ember-cli-app-version": "^2.0.0",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-htmlbars": "^1.2.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-qunit": "^4.3.2",
     "ember-cli-release": "1.0.0-beta.2",
-    "ember-cli-shims": "^1.0.2",
+    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
+    "ember-cli-uglify": "^2.0.0",
     "ember-data": "^2.11.0",
-    "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-resolver": "^3.0.0",
-    "ember-source": "~2.12.0",
-    "loader.js": "^4.0.10"
+    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.1.0",
+    "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~3.3.0",
+    "ember-source-channel-url": "^1.0.1",
+    "ember-try": "^0.2.23",
+    "eslint-plugin-ember": "^5.0.0",
+    "eslint-plugin-node": "^6.0.1",
+    "loader.js": "^4.0.10",
+    "qunit-dom": "^0.6.2"
   },
   "keywords": [
     "ember-addon",
@@ -52,9 +53,16 @@
     "csv",
     "spreadsheet"
   ],
+  "repository": "https://github.com/pauln/ember-spreadsheet-export",
+  "license": "MIT",
+  "author": "Matt Armstrong",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
   "dependencies": {
+    "ember-cli-babel": "^6.6.0",
     "ember-cli-htmlbars": "^1.2.0",
-    "ember-cli-babel": "^5.1.7",
     "ember-select-list": "^0.9.5",
     "xlsx": "^0.9.0"
   },
