--- a/package.json
+++ b/package.json
@@ -19,14 +19,11 @@
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
-    "ember-cli-app-version": "^2.0.0",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
     "ember-cli-qunit": "^4.3.2",
-    "ember-cli-release": "1.0.0-beta.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
@@ -62,7 +59,7 @@
   },
   "dependencies": {
     "ember-cli-babel": "^6.6.0",
-    "ember-cli-htmlbars": "^1.2.0",
+    "ember-cli-htmlbars": "^2.0.1",
     "xlsx": "^0.9.0"
   },
   "ember-addon": {
