npm: Update dependencies
Removes ember-cli-test-loader to resolve babel 5 deprecation warnings; updates ember-data to remove unused import warning.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^2.0.0",
-    "ember-data": "^2.11.0",
+    "ember-data": "~3.3.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
