--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "test": "tests"
   },
   "dependencies": {
+    "ember-auto-import": "^1.5.3",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-htmlbars": "^2.0.1",
-    "xlsx": "^0.9.0"
+    "file-saver": "^2.0.2",
+    "xlsx": "^0.9.13"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
