--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-cli-data-export",
-  "version": "0.1.29",
-  "author": "Matt Armstrong",
+  "name": "@izea/ember-cli-data-export",
+  "version": "0.2.0",
+  "author": "IZEA",
   "description": "Provides ability to export a set of json data as excel or csv file.",
   "directories": {
     "doc": "doc",
@@ -20,7 +20,7 @@
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each"
   },
-  "repository": "https://github.com/roofstock/ember-cli-data-export",
+  "repository": "https://github.com/izea/ember-cli-data-export",
   "engines": {
     "node": "10.* || >= 12"
   },
